--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
+@import "./fonts/Inter-VariableFont_opsz\,wght.ttf";
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  --bblue: #4D86FF;
+  --ppink: #FF4DED;
+  --ggray: #222733;
 }
 
 @theme inline {
@@ -20,7 +25,7 @@
 }
 
 body {
-  background: var(--background);
+  background: var(--bblue);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
