--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-/* @import "./fonts/Inter-VariableFont_opsz\,wght.ttf"; */
+@import "./fonts";
 
 :root {
   --background: #ffffff;
@@ -25,7 +25,6 @@
 }
 
 body {
-  background: var(--bblue);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter;
 }
